# tree-sitter-html

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  go.sum  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml
bindings/c/: tree-sitter-html.pc.in
bindings/go/: binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_html/: __init__.py  __init__.pyi  binding.c
bindings/rust/: README.md  lib.rs
bindings/swift/TreeSitterHTMLTests/: TreeSitterHTMLTests.swift
bindings/swift/TreeSitterHtmlTests/: TreeSitterHtmlTests.swift
corpus/: codepen_extensions.txt  main.txt
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc  tag.h  utils.h
test/corpus/: main.txt
test/highlight/: attributes.html  comments.html  entity.html
