[package]
name = "tree-sitter-html"
description = "HTML grammar for tree-sitter parsing library"
version = "0.16.0"
authors = [
    "Max Brunsfeld <maxbrunsfeld@gmail.com>",
    "Ashi Krishnan <queerviolet@github.com>"
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "html"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-html"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.17"

[build-dependencies]
cc = "1.0"
