[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-html"
description = "HTML grammar for tree-sitter"
version = "0.20.2"
keywords = ["incremental", "parsing", "tree-sitter", "html"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license.text = "MIT"
readme = "README.md"

[[project.authors]]
name = "Max Brunsfeld"
email = "maxbrunsfeld@gmail.com"

[[project.maintainers]]
name = "Amaan Qureshi"
email = "amaanq12@gmail.com"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-html"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
